2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (data_descriptor, do_compress, file_header,
	jarfile, number_of_entries, read_names_from_stdin, seekable,
	use_explicit_list_only, verbose, ziplist, ziplisthead, 
	ziplisttail, ziptail): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (write_data): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PROG_STDC_CC): Use C99 if possible.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (POD2MAN): Use VERSION variable.

	* Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* install-defs.sh.in: Removed.

	* configure.ac (AC_CONFIG_FILES): Removed install-defs.sh.

	* Makefile.in, configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (ZINCS, ZDEPS): Removed redundant variables.

	* Makefile.am (DEPENDENCIES): Removed. 
	(AM_CPPFLAGS) Removed redundant ZINCS variable.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_ENABLE): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_WITH): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_STRUCT_TM): Removed redundant check.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for cp, strip 
	and chmod.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for rm.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed Sun CC task.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18986

	* lib/stdbool_.h, m4/stdbool.m4: New files from